Rorato/src/objects/Mother_Language__c.object
<CustomObject>
    <description>The custom object will contain the language name, international language checkbox, possible language code. Make sure language name is unique.</description>
    <fields>
        <fullName>International_language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_name__c</fullName>
        <externalId>true</externalId>
        <label>Language name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Possible_language_code__c</fullName>
        <label>Possible language code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Mother Language</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mother_Language</fullName>
        <columns>NAME</columns>
        <columns>Language_name__c</columns>
        <columns>Possible_language_code__c</columns>
        <columns>International_language__c</columns>
        <filterScope>Everything</filterScope>
        <label>Mother Language</label>
    </listViews>
    <nameField>
        <label>Mother Language Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mother Languages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Language_Code</fullName>
        <active>true</active>
        <description>Validate the possible language code from Mother language object to allow only uppercase letters and the code maximum length should be 3</description>
        <errorConditionFormula>OR(Possible_language_code__c   &lt;&gt; UPPER(Possible_language_code__c), LEN(Possible_language_code__c)&gt;3 )</errorConditionFormula>
        <errorDisplayField>Possible_language_code__c</errorDisplayField>
        <errorMessage>Possible language code allow only uppercase letters and the code maximum length should be 3</errorMessage>
    </validationRules>
</CustomObject>